// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter option (row)  renders correctly 1`] = `
<li>
  <div
    className="filters__option"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="filters__value"
    />
    <span
      className="filters__button"
    >
      +
    </span>
  </div>
</li>
`;

exports[`Filter option (row) renders correctly 1`] = `
<li>
  <div
    className="filters__option"
    data-value="Acton"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <span
      className="filters__value"
    >
      Acton
    </span>
    <span
      className="filters__button"
    >
      +
    </span>
  </div>
</li>
`;
